# japanese-nlp-annotation-framework

./: .gitignore  CONTRIBUTING.md  README.md  README_UV.md  demo_visualization.py  justfile  pyproject.toml  requirements.txt  run_demo.sh  setup.py  show_samples.py  simple_quality_check.py
annotation_guidelines/: sentiment_analysis_guideline.md
annotation_tools/active_learning/: uncertainty_sampling.py
datasets/sentiment/: sample_annotations.json
evaluate/: quality_metrics.py
models/: benchmark_results.py
